fixed scrolling problem where you could see white space

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -8,7 +8,7 @@
   align-content: center;
   gap: 1rem;
   padding: {
-    block: 1rem;
+    // block: 1rem;
     inline: 1rem;
   }
 }
@@ -20,6 +20,7 @@
   font-size: 2.2rem;
   font-weight: bold;
   background-color: #ebf6ff;
+  margin-top: 1rem;
   padding: {
     block: 1rem;
   }
